--- a/Amplify.Jobs.DigitalOnboarding/Amplify.Jobs.DigitalOnboarding.csproj
+++ b/Amplify.Jobs.DigitalOnboarding/Amplify.Jobs.DigitalOnboarding.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.3.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.11.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
